--- a/src/app/wleddata/wleddata.component.html
+++ b/src/app/wleddata/wleddata.component.html
@@ -1,2 +1,50 @@
 <button (click)="getWledData()">Get Wled Data</button>
-<p>{{WledData?.state?.on}}</p>
+
+<div class="wled-container">
+    <div class="wled-form">
+      <form [formGroup]="wledForm" (ngSubmit)="onSubmit()">
+        <div class="form-group">
+          <label for="stateControl">State</label>
+          <input
+            id="stateControl"
+            formControlName="stateControl"
+            class="form-control"
+            placeholder="Enter state"
+          />
+        </div>
+  
+        <div class="form-group">
+          <label for="infoControl">Info</label>
+          <input
+            id="infoControl"
+            formControlName="infoControl"
+            class="form-control"
+            placeholder="Enter info"
+          />
+        </div>
+  
+        <div class="form-group">
+          <label for="effectsControl">Effects</label>
+          <input
+            id="effectsControl"
+            formControlName="effectsControl"
+            class="form-control"
+            placeholder="Enter effects"
+          />
+        </div>
+  
+        <div class="form-group">
+          <label for="palettesControl">Palettes</label>
+          <input
+            id="palettesControl"
+            formControlName="palettesControl"
+            class="form-control"
+            placeholder="Enter palettes"
+          />
+        </div>
+  
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </div>
+  </div>
+  
