--- a/src/app/sidenav-content/sidenav-content.component.html
+++ b/src/app/sidenav-content/sidenav-content.component.html
@@ -1,4 +1,4 @@
 <mat-nav-list>
     <a mat-list-item routerLink="/" routerLinkActive="active">Home</a>
-    <a mat-list-item routerLink="/test" routerLinkActive="active">About</a>
+    <a mat-list-item routerLink="/config" routerLinkActive="active">IpConfig</a>
 </mat-nav-list>
